fix gap in search engine

--- a/style.css
+++ b/style.css
@@ -2429,7 +2429,7 @@ input[type="radio"] {
   display: flex;
   flex-wrap: wrap;
   align-items: flex-start;
-  gap: 40px;
+  gap: 25px;
 }
 
 .shuriken-header-icon {
